(fix) issue with map not fitting the screen

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -19,3 +19,8 @@
   z-index: 10;
   position: fixed;
 }
+
+* {
+  padding: 0px;
+  margin: 0px;
+}
